# lib/db/src/schema/index.ts
@@ -2,3 +2,5 @@ export * from "./tasks";
 export * from "./notes";
 export * from "./reminders";
 export * from "./chat_messages";
+export * from "./conversations";
+export * from "./messages";
